# TradingAgents

./: .gitignore  Challenge_1.ipynb  Challenge_1_Enhanced.ipynb  Challenge_1_original.ipynb  Challenge_2.ipynb  Challenge_2_ori.ipynb  Challenge_3.ipynb  Challenge_3_original.ipynb  Chanllege_1.ipynb  PROJECT_STATUS.md  README.md  REFACTORING_SUMMARY.md  cli_simple.py  default_config.py  main.py  model_utils.py  pyproject.toml  requirements.txt  run.py  test.py
agents/: __init__.py  bear_researcher.py  bull_researcher.py  conversation_swarm.py  market_analyst.py  news_analyst.py  research_manager.py  trader.py
chroma/: chroma.sqlite3
cli/: main.py
dataflows/: config.py  googlenews_utils.py  interface.py  reddit_utils.py  stockstats_utils.py
graph/: __init__.py  trading_graph.py
strands_agents/: .gitignore  ANALYSIS.md  README.md  TODO.md  __init__.py  default_config.py  inspect_memories.py  memory_inspection_demo.py  model_utils.py  run.py  run_decision.py  run_reflection.py  test_tools.py  test_trace.py  view_memories.py
strands_agents/agents/: __init__.py  aggresive_debator.py  bear_researcher.py  bull_researcher.py  conservative_debator.py  conversation_swarm.py  fundamentals_analyst.py  market_analyst.py  neutral_debator.py  news_analyst.py  reflector.py  research_manager.py  risk_manager.py  social_media_analyst.py  trader.py
strands_agents/cli/: main.py
strands_agents/dataflows/: config.py  interface.py
strands_agents/graph/: __init__.py  trading_graph.py
tools/: __init__.py  memory.py  toolkit.py
tradingagents/: default_config.py
(+9 files in other folders)
