[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions",
    "openai",
    "pandas",
    "yfinance",
    "praw",
    "feedparser",
    "stockstats",
    "eodhd",
    "chromadb",
    "setuptools",
    "backtrader",
    "akshare",
    "tushare",
    "finnhub-python",
    "parsel",
    "requests",
    "tqdm",
    "pytz",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "redis",
    "chainlit",
    "rich",
    "questionary",
    "strands-agents>=0.2.1",
    "strands-agents-tools",
    "pytest",
    "streamlit",
    "mcp[cli]>=1.10.1",
    "otel>=0.0.1",
]
